<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_constraint_layout_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/custom_toolbar" />

        <ImageView
            android:id="@+id/id_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/id_add_book_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/id_back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/book_info"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/id_save_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_check"
            android:layout_margin="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/id_constraint_layout_1"
        app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_book_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:textSize="18sp"
                        android:background="@color/white"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_book_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/author"
                        android:textSize="18sp"
                        android:background="@color/white"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_book_publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/publisher"
                        android:textSize="18sp"
                        android:background="@color/white"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <include layout="@layout/layout_pages_edit_text_field"/>

                <Spinner
                    android:id="@+id/id_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>

                <include layout="@layout/layout_summary"/>

            </LinearLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>